# Magic

./: .gitignore  README.md  pyproject.toml
config/: config.example.toml
scripts/: init_db.py  refresh.py  test_moxfield_edhrec.py  test_topdeck.py  watchlist.py
src/magic/: __init__.py  config.py
src/magic/db/: connection.py  migrate.py  schema.sql
src/magic/ingest/: edhrec.py  scryfall.py  topdeck.py
