[project]
name = "magic"
version = "0.1.0"
description = "MTG EDH/Commander deck building and meta analysis"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "ijson>=3.2",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
mcp = [
    "mcp>=1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
